Dockerfile, Docker-Compose e Dependencies Fixes

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,28 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<springboot.version>2.4.3</springboot.version>
+		<camel-version>3.8.0</camel-version>
 	</properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${springboot.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.camel.springboot</groupId>
+				<artifactId>camel-spring-boot-bom</artifactId>
+				<version>${camel-version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 		<!-- SPRING BOOT WEB -->
@@ -60,10 +81,6 @@
 		</dependency>
 
 		<!-- METRICS AND HEALTH CHECKS -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
