--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     image: "wurstmeister/kafka"
     hostname: "kafka"
     container_name: camel_boilerplate_kafka
+    restart: always
     ports:
       - "9092:9092"
     depends_on:
@@ -20,7 +21,7 @@ services:
     environment:
       KAFKA_ADVERTISED_HOST_NAME: "kafka"
       KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
-      KAFKA_CREATE_TOPICS: "camel_boilerplate_topic:1:1"
+      KAFKA_CREATE_TOPICS: "sample_topic:1:1"
       KAFKA_BROKER_ID: "1001"
       KAFKA_RESERVED_BROKER_MAX_ID: "1001"
     volumes:
