--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ management.endpoint.health.status.http-mapping.down=200
 # to turn ON/OFF Camel info in (/actuator/info)
 management.info.camel.enabled=true
 management.info.camel.verbose=true
+
+# Database properties
+database.driver=org.postgresql.Driver
